The fifth sprint, the third review